Extension/src/pages/popup/components/Tabs/tabs.pcss
.tabs {
    &__panel {
        padding: 8px;
        &-wrapper {
            overflow: hidden;
            display: flex;
            column-gap: 8px;
            padding: 4px;
            border-radius: 12px;
            background: var(--fills-backgrounds-page-background-additional-default);
        }
    }

    &__content {
        padding: 8px 0;
        overflow: auto;
        scrollbar-width: thin;
        display: flex;
        align-items: center;

        &--stats {
            max-height: 176px;
            min-height: 176px;
            overflow-y: scroll;
            scrollbar-width: thin;
            scrollbar-color: var(--fills-loaders-background-default) var(--fills-backgrounds-page-background-default);
        }

        &::-webkit-scrollbar {
            width: 6px;
        }

        /* TODO: check if needed */
        &::-webkit-scrollbar-track {
            background: var(--fills-loaders-background-default);
        }

        /* TODO: check if needed */
        &::-webkit-scrollbar-thumb {
            background-color: var(--fills-loaders-background-default);
            border-radius: 4px;
        }
    }

    &__tab {
        font-size: 16px;
        line-height: 1.3;
        font-weight: 400;
        padding: 8px 16px;
        cursor: pointer;
        text-align: center;
        transition: var(--t3) color, var(--t3) background-color;
        color: var(--text-description-description-default);
        flex: 1 0 0;
        border-radius: 8px;
        background-color: transparent;

        &:hover {
            color: var(--text-main-text-main-default);
        }

        &--active {
            cursor: default;
            color: var(--text-main-text-main-default);
            background-color: var(--fills-backgrounds-page-background-default);
            box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.12), 0px 3px 1px 0px rgba(0, 0, 0, 0.04);
        }
    }

    &--non-active {
        opacity: 0.5;
        pointer-events: none;
    }
}

